--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ListActivity"
+            android:exported="false" >
+        </activity>
+
     </application>
 
 </manifest>
